--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   dfunc: ^0.6.2
   equatable: ^2.0.0
+  extended_image: ^4.0.0
+  flutter_bloc: ^7.0.0
+  flutter_svg: 0.21.0-nullsafety.0
   get_it: ^6.0.0
+  google_fonts: ^2.0.0
   http: ^0.13.1
   pedantic: ^1.11.0
 
