--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   cached_network_image: ^3.0.0
   cupertino_icons: ^1.0.2
   dfunc: ^0.6.2
+  easy_localization: ^3.0.0
   equatable: ^2.0.0
   flutter_bloc: ^7.0.0
   flutter_svg: 0.21.0-nullsafety.0
@@ -52,6 +53,7 @@ flutter:
   assets:
     - assets/svgs/
     - assets/pngs/
+    - assets/languages/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
